deactivate NaN filter for orders

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orders = pd.read_csv(data_dir + \"orders.csv\", sep=';', converters=convs)\n",
+    "orders = pd.read_csv(data_dir + \"orders.csv\", sep=';', converters=convs, na_filter=False)\n",
     "\n",
     "print(f'Total number of orders: {orders.size}')\n",
     "orders.head()"
@@ -70,6 +70,16 @@
    "source": [
     "# orders grouped by origin port\n",
     "orders.groupby(by='origin_port').agg({'order_id': 'count', 'units': 'sum'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# orders grouped by origin port and logistic hub\n",
+    "orders.groupby(by=['origin_port','logistic_hub']).agg({'units': 'sum'})"
    ]
   },
   {
