rename cities DataFrame for compatibility

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -95,9 +95,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities = pd.read_csv(data_dir + 'cities_data.csv', sep=';')\n",
+    "cities_data = pd.read_csv(data_dir + 'cities_data.csv', sep=';')\n",
     "\n",
-    "cities.head()"
+    "cities_data.head()"
    ]
   },
   {
