add basic lateness plots

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -14,6 +14,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "data_dir = './data/'"
    ]
@@ -69,7 +70,8 @@
    "outputs": [],
    "source": [
     "# orders grouped by origin port\n",
-    "orders.groupby(by='origin_port').agg({'order_id': 'count', 'units': 'sum'})"
+    "orders_per_port = orders.groupby(by='origin_port').agg({'order_id': 'count', 'units': 'sum'})\n",
+    "orders_per_port"
    ]
   },
   {
@@ -80,6 +82,131 @@
    "source": [
     "# orders grouped by origin port and logistic hub\n",
     "orders.groupby(by=['origin_port','logistic_hub']).agg({'units': 'sum'})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Effect of Customs Procedures on Lateness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = orders[orders['late_order'] == True].groupby(by=['origin_port', 'customs_procedures']).count()[['order_id']]\n",
+    "b = orders.groupby(by=['origin_port', 'customs_procedures']).count()[['order_id']]\n",
+    "c = a/b\n",
+    "\n",
+    "c.plot(kind='bar')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Effect of Origin Port on Lateness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = orders[orders['late_order'] == True].groupby(by=['origin_port']).count()[['order_id']]\n",
+    "b = orders.groupby(by=['origin_port']).count()[['order_id']]\n",
+    "c = a/b\n",
+    "\n",
+    "c.plot(kind='bar')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Effect of Logistic Hub on Lateness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = orders[orders['late_order'] == True].groupby(by=['logistic_hub']).count()[['order_id']]\n",
+    "b = orders.groupby(by=['logistic_hub']).count()[['order_id']]\n",
+    "c = (a/b).sort_values(by='order_id')\n",
+    "\n",
+    "c.plot(kind='bar')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Effect of 3rd-party Logistics on Lateness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = orders[orders['late_order'] == True].groupby(by=['3pl']).count()[['order_id']]\n",
+    "b = orders.groupby(by=['3pl']).count()[['order_id']]\n",
+    "c = a/b\n",
+    "\n",
+    "c.plot(kind='bar')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Effect of Number of Units on Lateness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_units = max(orders['units'])\n",
+    "unit_groups = 7\n",
+    "unit_steps = np.linspace(0, max_units, unit_groups + 1)\n",
+    "print(f'max_units: {max_units}')\n",
+    "print(f'unit_groups: {unit_groups}')\n",
+    "print(f'unit_steps: {unit_steps}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "late_percentages = []\n",
+    "for i in range(len(unit_steps) - 1):\n",
+    "    x = orders[orders['units'].between(unit_steps[i], unit_steps[i+1])].groupby('late_order').count()[['units']]\n",
+    "    num_late = x['units'][True]\n",
+    "    num_in_range = x['units'][True] + x['units'][False]\n",
+    "    late_percentages.append(num_late / num_in_range)\n",
+    "    print(f'[{unit_steps[i]},{unit_steps[i+1]}]: num_late={num_late}, num_in_range={num_in_range}, percentage={late_percentages[i]}')\n",
+    "\n",
+    "#a = orders[orders['late_order'] == True].groupby(by=['units']).count()[['order_id']]\n",
+    "#b = orders.groupby(by=['units']).count()[['order_id']]\n",
+    "#c = a/b\n",
+    "\n",
+    "pd.Series(late_percentages, unit_steps[:-1]).plot()\n",
+    "\n",
+    "#c.plot(kind='bar')\n",
+    "#orders[orders['units'] < 500].sort_values(by='units').groupby('late_order').sum()[['units']]"
    ]
   },
   {
