fix v2 version of notebook

--- a/kaggle_notebook_v2.ipynb
+++ b/kaggle_notebook_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,9 +104,9 @@
     "  if fit:\n",
     "    enc.fit(discrete_raw_features)\n",
     "  discrete_features = np.array(enc.transform(discrete_raw_features).toarray())\n",
-    "  return discrete_features\n",
+    "  return discrete_features, enc\n",
     "\n",
-    "one_hot_features = make_discrete_features(\n",
+    "one_hot_features, enc = make_discrete_features(\n",
     "  df_orders,\n",
     "  [\n",
     "    \"origin_port\",\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "                   warm_start=False)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,19 +243,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pred [ True  True  True ...  True False  True]\n",
-      "pred ratio 0.5659445194550141\n",
-      "tree acc: 0.812569043819811\n",
-      "pred [ True  True  True ... False False False]\n",
-      "pred ratio 0.4885540689824475\n",
-      "log acc: 0.7481895176138456\n"
+      "pred [ True  True  True ...  True  True  True]\n",
+      "pred ratio 0.5652080520436971\n",
+      "tree acc: 0.8111881674235915\n",
+      "pred [ True False  True ...  True  True  True]\n",
+      "pred ratio 0.4878482877132687\n",
+      "log acc: 0.7484963790352277\n"
      ]
     }
    ],
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -288,19 +288,19 @@
      "output_type": "stream",
      "text": [
       "Feature size: (28563, 820)\n",
-      "[[0.90081783 0.09918217]\n",
-      " [0.84810094 0.15189906]\n",
-      " [0.73120595 0.26879405]\n",
+      "[[0.90244219 0.09755781]\n",
+      " [0.90158268 0.09841732]\n",
+      " [0.77153897 0.22846103]\n",
       " ...\n",
-      " [0.87881491 0.12118509]\n",
-      " [0.42906996 0.57093004]\n",
-      " [0.76637064 0.23362936]]\n"
+      " [0.84886028 0.15113972]\n",
+      " [0.4377506  0.5622494 ]\n",
+      " [0.7347803  0.2652197 ]]\n"
      ]
     }
    ],
    "source": [
     "# make features with testing data\n",
-    "one_hot_features = make_discrete_features(\n",
+    "one_hot_features, _ = make_discrete_features(\n",
     "  df_test,\n",
     "  [\n",
     "    \"origin_port\",\n",
